- Adding a new activity
- Displaying details of an activity

## Version v0.2
- Automated filling of Person field when adding a new activity
- Activity templates with associated experience points
- Improved UI

## Version v0.3.1
- Support for work requests

## Version v0.3.2
- Fixed bugs related to work requests
- Added relationships between activities and work requests
- Added work request status (completed or not)
- Improved navigation

## Version v0.4.1
- Data for leaderboards stored in a new DynamoDB table
- Fixed duplicate description in work request details
- Added backgrounds to work request template icons
- Added new work request template
- Added filtering of work requests (all/not completed)

## Version v0.4.2
- Data for leaderboards are displayed on a new page

## Version v0.4.3
- Ability to install as a Progressive Web Application (PWA)

## Version v0.4.4
- Fixed navigation to landing page in PWA

## Version v0.4.5
- Initial version of reactions
- Representing urgency as text labels, not numbers
- Small bug fixes

## Version v0.4.6
- Statistics allowing to see data for all months

## Version v0.4.7
- Fixed bug: duplicate activities spawned from work request
- Small UI adjustments for statistics
- Fixed bug: inability to set urgency to ,,immediately''

## Version v0.4.8
- Heavy refactoring
- Reactions are visible on activity details right after they were added

## Version v0.4.9
- Added point-in-time recovery for data stored in DynamoDB to improve the data security
- Activity list and work request list are now rendered using virtualized lists to improve the performance

## Version v0.4.10
- Added charts for experience statistics
- GUI improvements for experience statistics

## Version v0.4.11
- Fixed exp stats processing problem by increasing Lambda function timeout from 3 to 10 seconds

## Version v0.4.12
- Refactoring
- Changed type of activity completion field from datetime to date
- Added "Today" and "Yesterday" buttons to add activities quicker